# lelampV4

./: .gitignore  CLAUDE.md  README.md  calibrate_servo.py  install.sh  llm.py  main.py  pyproject.toml  record_animation.py  rgb_controller.py  run_game.sh  servo_controller.py  tools.py  vision_controller.py  web_server.py
bridge/: __main__.py  forward_kinematics.py  server.py  sounds.py
game/: index.html  package-lock.json  package.json
game/public/models/assets/: ac1.stl  ac2.stl  bottom_link.stl  top_link_wire_cover.stl
game/src/: camera.js  effects.js  enemies.js  hud.js  leaderboard.js  main.js  player.js  shooting.js  websocket.js
my_robot/: config.json
my_robot/assets/: ac1.part  ac2.part  base_core.part  base_cover.part  base_cover.stl  base_plate.part  bottom_link.part  bottom_link_wire_cover.part  camera_mount.part  camera_mount.stl  fade_diffuser.part  head_core.part  head_core.stl  head_diffuser.part  head_diffuser.stl  head_link.part  led_mount.part  led_mount.stl  main.part  shade.part  shade.stl  top_link.part  top_link.stl  top_link_wire_cover.part  wire_cover.part  wire_cover__2.part  wire_cover__2.stl
servo_animations/: being_pet.csv  curious.csv  dance.csv  excited.csv  happy_wiggle.csv  idle.csv  light_table.csv  look_down.csv  look_left.csv  look_right.csv  look_up.csv  sad.csv
static/: index.html
