[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.0.0",
    "numpy",
    "openai>=2.17.0",
    "websockets>=16.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]

[project.optional-dependencies]
# Full hardware stack — install on Raspberry Pi only
pi = [
    "adafruit-blinka-raspberry-pi5-neopixel>=1.0.0rc2",
    "adafruit-circuitpython-neopixel>=6.3.21",
    "feetech-servo-sdk>=1.0.0",
    "lerobot>=0.4.2",
    "lgpio>=0.2.2.0",
    "mediapipe==0.10.14",
    "rpi-ws281x>=5.0.0",
]
